delete bios, update sponsers

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
 
             <div class="indent" id="board_member">
-                <h3>Founder</h3>
+                <!-- <h3>Founder</h3>
                 <div class="content-container" style="flex-direction: column;">
                     <div class="circle-frame-large">
                         <img src="/assets/board_photo/jonnathan.jpg" alt="Jonnathan Yepez Cariño">
@@ -124,39 +124,86 @@
                         </br></br>
                         Today, Jonnathan leads as Founder of the Foundation and CEO of Sin Fronteras Consulting LLC, providing strategic support to nonprofits and businesses committed to impact. He also serves as Co-President of the Greater Marysville Tulalip Chamber Foundation and as a finance committee member and board member for the Snohomish Community Foundation—always working to expand access to education, opportunity, and generational wealth for the communities he represents.
                     </p>
-                </div>
+                </div> -->
 
                 <h3>Board of Directors</h3>
                 <div class="content-container" style="flex-direction: column;">
-                    <div class="content-container">
-                        <div class="circle-frame">
-                            <img src="/assets/board_photo/jaime.jpg" alt="Jaime Méndez">
+                    <div class="content-container" style="flex-direction: row;">
+                        <div class="circle-frame-large">
+                            <img src="/assets/board_photo/jonnathan.jpg" alt="Jonnathan Yepez Cariño">
                         </div>
-                        <p class="bio">
-                            <strong>Jaime Méndez</strong>, an Emmy-winning journalist and influencer, is a pioneer of Spanish-language media in Washington. With nearly 30 years in communications, he was the lead news anchor for Univision Seattle since its launch in 2007.
-                            </br></br>
-                            In 2024, he launched Se Habla Media, where he leads as CEO, bringing independent journalism to social media. A passionate advocate for youth and education, Jaime supports the Overcoming Adversity Cariño Scholarship Foundation to empower students.
-                            </br></br>
-                            Originally from Colombia, he moved to the U.S. in 1987 and earned his degree in Communications and Social Sciences from The Evergreen State College.
-                        </p>
+                        <div class="bio">
+                            <h4>Jonnathan Yepez Cariño</h4>
+                            <em>Founder & Executive Director</em>
+                        </div>
                     </div>
-                    <div class="content-container">
-                        <div class="circle-frame">
+                    <div class="content-container" style="flex-direction: row;">
+                        <div class="circle-frame-large">
                             <img src="/assets/board_photo/laurie.jpg" alt="Laurie Barbosa">
                         </div>
-                        <p class="bio">
+                        <div class="bio">
+                            <h4>Laurie Barbosa</h4>
+                            <em>President</em>
+                        </div>
+                        <!-- <p class="bio">
                             <strong>Laurie Barbosa</strong>, the daughter of Mexican and Costa Rican immigrants, has served over 20 years as an Engineering Coordinator for the City of Marysville. A passionate advocate for social justice, she champions housing, education, mental health, and food security in Snohomish County.
                             </br></br>
                             Graduating Magna Cum Laude with a 4.0 GPA from Western Washington University, Laurie is now pursuing a master’s in social work to expand her impact. She supports students through the Overcoming Adversity Cariño Scholarship Foundation and serves on multiple boards, including Millennia Ministries and the City of Marysville’s DEIAB Advisory Committee.
                             </br></br>
                             Committed to equity and inclusion, Laurie works tirelessly to build a stronger, more just community.
-                        </p>
+                        </p> -->
                     </div>
-                    <div class="content-container">
-                        <div class="circle-frame">
+                    <div class="content-container" style="flex-direction: row;">
+                        <div class="circle-frame-large">
+                            <img src="/assets/board_photo/jaime.jpg" alt="Jaime Méndez">
+                        </div>
+                        <div class="bio">
+                            <h4>Jaime Mendez</h4>
+                            <em>Vice President</em>
+                        </div>
+                        <!-- <p class="bio">
+                            <strong>Jaime Méndez</strong>, an Emmy-winning journalist and influencer, is a pioneer of Spanish-language media in Washington. With nearly 30 years in communications, he was the lead news anchor for Univision Seattle since its launch in 2007.
+                            </br></br>
+                            In 2024, he launched Se Habla Media, where he leads as CEO, bringing independent journalism to social media. A passionate advocate for youth and education, Jaime supports the Overcoming Adversity Cariño Scholarship Foundation to empower students.
+                            </br></br>
+                            Originally from Colombia, he moved to the U.S. in 1987 and earned his degree in Communications and Social Sciences from The Evergreen State College.
+                        </p> -->
+                    </div>
+                    <div class="content-container" style="flex-direction: row;">
+                        <div class="circle-frame-large">
+                            <img src="/assets/board_photo/dawn.jpg" alt="Dawn Hitchcock">
+                        </div>
+                        <div class="bio">
+                            <h4>Dawn Hitchcock</h4>
+                            <em>Treasurer</em>
+                        </div>
+                        <!-- <p class="bio">
+                            <strong>Dawn</strong> is a dedicated banking professional with eight years of experience and a deep passion for community service . Her leadership journey began in hospitality, where she engaged with amazing nonprofits like Housing Hope, Junior Achievement, Rotary, and the Chamber.
+                            </br></br> Her commitment to uplifting others aligns perfectly with our mission, and she is eager to help expand our impact! Beyond her career and volunteer work, Dawn is a proud single mother and an adventure enthusiast —always exploring the PNW with her incredible child!
+                        </p> -->
+                    </div>
+                    <div class="content-container" style="flex-direction: row;">
+                        <div class="circle-frame-large">
+                            <img src="/assets/board_photo/carla.jpg" alt="Carla Coote">
+                        </div>
+                        <div class="bio">
+                            <h4>Carla Coote</h4>
+                            <em>Secretary</em>
+                        </div>
+                        <!-- <p class="bio">
+                            Born and raised in Jamaica, <strong>Carla</strong>’s journey has been shaped by resilience, adaptability, and a passion for helping to creating opportunities for others. Carla is a dedicated advocate for financial empowerment and diversity, and takes inspiration from Jamaica’s motto, “Out of Many, One People,”.
+                            </br></br>With a background in banking, capital markets, and corporate finance, Carla is committed to breaking barriers and championing equity in education; through her commitment to supporting underrepresented communities in achieving stability and success.
+                            </br></br>Carla is honored to contribute to a mission that helps minority students unlock their potential by empowering the future generations to thrive.
+                        </p> -->
+                    </div>
+                    <div class="content-container" style="flex-direction: row;">
+                        <div class="circle-frame-large">
                             <img src="/assets/board_photo/griselda.jpg" alt="Griselda Guevara-Cruz">
                         </div>
-                        <p class="bio">
+                        <div class="bio">
+                            <h4>Griselda Guevara Cruz</h4>
+                        </div>
+                        <!-- <p class="bio">
                             <strong>Griselda Guevara-Cruz</strong>, the daughter of Mixtecan immigrants, is a trilingual first-generation professional currently serving as a Program Supervisor at the Washington Office of Superintendent of Public Instruction.
                             </br></br>
                             She comes from a farmworker family who spent many years traveling between Washington state, Oregon, and California. Passionate about advocating for and creating equitable access to educational opportunities for young people, Griselda has dedicated her career to advancing postsecondary opportunities for students in Washington state.
@@ -164,9 +211,28 @@
                             Griselda is a proud graduate of Mariner High School, Whitman College (BA), The University of Texas at Austin (MA), and the Congressional Hispanic Caucus Institute. She is a featured author in the Harvard Kennedy School Journal of Hispanic Policy, Vol. 30 (“The Importance of College-Going Culture for Latinos Prior to High School”). Griselda is also the recipient of the 2012 National Association for Chicana and Chicano Studies Frederick A. Cervantes Undergraduate Student Premio for her research contribution to Chicana/o Studies.
                             </br></br>
                             She currently serves as a Trustee on the Sno-Isle Libraries Board of Trustees and an application reviewer for a national organization’s fellowship programs focused on leadership development. Griselda looks forward to contributing her expertise to the goals of the Overcoming Adversity Cariño Scholarship Foundation.
-                        </p>
+                        </p> -->
                     </div>
-                    <div class="content-container">
+                    <div class="content-container" style="flex-direction: row;">
+                        <div class="circle-frame-large">
+                            <img src="/assets/board_photo/eric.jpg" alt="Eric Jimenez">
+                        </div>
+                        <div class="bio">
+                            <h4>Eric Jimenez</h4>
+                        </div>
+                        <!-- <p class="bio">
+                            <strong>Eric Jimenez</strong> is a youth activist and the Co-Founder/CEO of Events That Benefit and Reyes Events, a leader in the Quinceañera industry for 14 years. With over 23 years of experience in Folkloric dance, he is passionate about promoting Mexican culture among youth. Born and raised in California, Eric relocated to Snohomish County in 2019, bringing his dedication to cultural promotion and community service.
+                            <br><br> has an extensive eight-year background working with at-risk and homeless youth, as well as those facing mental health and substance abuse challenges. In February 2024, he joined the City of Everett Mayor’s Drug Crisis Task Force, contributing to actionable recommendations for community safety and support.
+                            <br><br>Recognized for his leadership, Eric was a Top 4 finalist for the Emerging Leader Award 2024. His ongoing commitment to youth empowerment and cultural advocacy continues to make a positive impact on the community.
+                        </p> -->
+                    </div>
+                    <div class="content-container" style="flex-direction: row;">
+                        <span class="empty-frame"></span>
+                        <div class="bio">
+                            <h4>Andrea Enriquez</h4>
+                        </div>
+                    </div>
+                    <!-- <div class="content-container">
                         <div class="circle-frame">
                             <img src="/assets/board_photo/jovani.jpg" alt="Jovani">
                         </div>
@@ -177,36 +243,7 @@
                             </br></br>
                             With a passion for giving back, he aspires to use his experiences to empower others, build meaningful relationships, and drive positive change. His work ethic, integrity, and relentless pursuit of excellence make him a true leader in the making!
                         </p>
-                    </div>
-                    <div class="content-container">
-                        <div class="circle-frame">
-                            <img src="/assets/board_photo/dawn.jpg" alt="Jovani">
-                        </div>
-                        <p class="bio">
-                            <strong>Dawn</strong> is a dedicated banking professional with eight years of experience and a deep passion for community service . Her leadership journey began in hospitality, where she engaged with amazing nonprofits like Housing Hope, Junior Achievement, Rotary, and the Chamber.
-                            </br></br> Her commitment to uplifting others aligns perfectly with our mission, and she is eager to help expand our impact! Beyond her career and volunteer work, Dawn is a proud single mother and an adventure enthusiast —always exploring the PNW with her incredible child!
-                        </p>
-                    </div>
-                    <div class="content-container">
-                        <div class="circle-frame">
-                            <img src="/assets/board_photo/eric.jpg" alt="Eric Jimenez">
-                        </div>
-                        <p class="bio">
-                            <strong>Eric Jimenez</strong> is a youth activist and the Co-Founder/CEO of Events That Benefit and Reyes Events, a leader in the Quinceañera industry for 14 years. With over 23 years of experience in Folkloric dance, he is passionate about promoting Mexican culture among youth. Born and raised in California, Eric relocated to Snohomish County in 2019, bringing his dedication to cultural promotion and community service.
-                            <br><br> has an extensive eight-year background working with at-risk and homeless youth, as well as those facing mental health and substance abuse challenges. In February 2024, he joined the City of Everett Mayor’s Drug Crisis Task Force, contributing to actionable recommendations for community safety and support.
-                            <br><br>Recognized for his leadership, Eric was a Top 4 finalist for the Emerging Leader Award 2024. His ongoing commitment to youth empowerment and cultural advocacy continues to make a positive impact on the community.
-                        </p>
-                    </div>
-                    <div class="content-container">
-                        <div class="circle-frame">
-                            <img src="/assets/board_photo/carla.jpg" alt="Carla">
-                        </div>
-                        <p class="bio">
-                            Born and raised in Jamaica, <strong>Carla</strong>’s journey has been shaped by resilience, adaptability, and a passion for helping to creating opportunities for others. Carla is a dedicated advocate for financial empowerment and diversity, and takes inspiration from Jamaica’s motto, “Out of Many, One People,”.
-                            </br></br>With a background in banking, capital markets, and corporate finance, Carla is committed to breaking barriers and championing equity in education; through her commitment to supporting underrepresented communities in achieving stability and success.
-                            </br></br>Carla is honored to contribute to a mission that helps minority students unlock their potential by empowering the future generations to thrive.
-                        </p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -232,6 +269,7 @@
                     <img class="logo-small box" src="/assets/logo/se_habla.jpeg" alt="se habla media">
                     <img class="logo-small box" src="/assets/logo/Martina Guadalupe (Logo).png" alt="martina guadalupe">
                     <img class="logo-small box" src="/assets/logo/FGATE WELLNESS LOGO.jpeg" alt="fgate wellness">
+                    <img class="logo-small box" src="/assets/logo/pnw_premier_clothing.png" alt="pnw premier clothing">
                 </div>
             </div>
         </section>
