--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
                         </div>
                         <div class="bio">
                             <h4>Griselda Guevara Cruz</h4>
+                            <em>Board Member</em>
                         </div>
                         <!-- <p class="bio">
                             <strong>Griselda Guevara-Cruz</strong>, the daughter of Mixtecan immigrants, is a trilingual first-generation professional currently serving as a Program Supervisor at the Washington Office of Superintendent of Public Instruction.
@@ -219,6 +220,7 @@
                         </div>
                         <div class="bio">
                             <h4>Eric Jimenez</h4>
+                            <em>Board Member</em>
                         </div>
                         <!-- <p class="bio">
                             <strong>Eric Jimenez</strong> is a youth activist and the Co-Founder/CEO of Events That Benefit and Reyes Events, a leader in the Quinceañera industry for 14 years. With over 23 years of experience in Folkloric dance, he is passionate about promoting Mexican culture among youth. Born and raised in California, Eric relocated to Snohomish County in 2019, bringing his dedication to cultural promotion and community service.
@@ -230,6 +232,7 @@
                         <span class="empty-frame"></span>
                         <div class="bio">
                             <h4>Andrea Enriquez</h4>
+                            <em>Board Member</em>
                         </div>
                     </div>
                     <!-- <div class="content-container">
