--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                     <img class="logo-small box" src="/assets/logo/Martina Guadalupe (Logo).png" alt="martina guadalupe">
                     <img class="logo-small box" src="/assets/logo/FGATE WELLNESS LOGO.jpeg" alt="fgate wellness">
                     <img class="logo-small box" src="/assets/logo/pnw_premier_clothing.png" alt="pnw premier clothing">
+                    <img class="logo-small box" src="/assets/logo/craft_beer_logo.jpeg" alt="craft beer middleton">
                 </div>
             </div>
         </section>
